--- a/style1.css
+++ b/style1.css
@@ -42,6 +42,7 @@ body {
   box-shadow: 5px 5px 20px black;
   border-radius: 10px;
   margin-top: 7px;
+  margin-bottom: 7px;
 }
 
 h1 {
@@ -166,7 +167,7 @@ h1 {
 
 .main-inf-input {
   width: 30%;
-  height: 50px;
+  height: 40px;
   border: 1px solid silver;
   border-radius: 5px;
   font-size: 24px;
@@ -175,7 +176,7 @@ h1 {
 
 .main-inf-input-date {
   width: 30%;
-  height: 50px;
+  height: 40px;
   border: 1px solid silver;
   border-radius: 5px;
   font-size: 24px;
@@ -183,17 +184,28 @@ h1 {
 }
 
 .main-inf {
-  width: 65%;
+  width: 45%;
   color: black;
   font-weight: 100;
   font-size: 24px;
   line-height: 1.5;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  word-wrap: break-word;
+  text-align: left;
+}
+
+.date {
+  width: 20%;
+  color: black;
+  font-weight: 100;
+  font-size: 24px;
+  line-height: 1.5;
+  word-wrap: break-word;
+  text-align: center;
 }
 
 .cost-one-input {
   width: 15%;
-  height: 50px;
+  height: 40px;
   border: 1px solid silver;
   border-radius: 5px;
   font-size: 24px;
@@ -205,7 +217,8 @@ h1 {
   color: black;
   font-weight: 100;
   font-size: 24px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  word-wrap: break-word;
+  text-align: center;
 }
 
 .block-img {
@@ -231,6 +244,14 @@ h1 {
 
   .block-img {
     width: 10%;
+  }
+
+  .date {
+    width: 22%;
+  }
+
+  .main-inf {
+    width: 40%;
   }
 }
 
@@ -275,6 +296,11 @@ h1 {
     font-size: 20px;
   }
 
+  .date {
+    width: 26%;
+    font-size: 18px;
+  }
+
   .main-inf-input {
     font-size: 20px;
     height: 50px;
@@ -292,8 +318,8 @@ h1 {
   }
 
   .cost-one {
-    width: 20%;
-    font-size: 20px;
+    width: 17%;
+    font-size: 18px;
   }
   
   .block-img {
@@ -301,23 +327,30 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     height: 100%;
   }
   
   .block-img img {
     width: 17px;
     height: 17px;
+    margin: 5px 0;
   }
 }
 
 @media screen and (max-width: 415px) {
   .container {
+    height: 98vh;
     width: 95%;
+    padding: 10px;
   }
 
   h1 {
-    font-size: 35px;
+    font-size: 30px;
+  }
+
+  .block-list {
+    height: 100%;
   }
   
   .block-input-1 input {
@@ -333,14 +366,23 @@ h1 {
     margin-top: 20px;
   }
 
+  .block-cost-all {
+    font-size: 22px;
+  }
+
   .main-inf {
-    font-size: 18px;
-    width: 50%;
+    font-size: 16px;
+    width: 45%;
+  }
+
+  .date {
+    font-size: 14px;
+    width: 24%;
   }
   
   .cost-one {
-    width: 30%;
-    font-size: 18px;
+    font-size: 14px;
+    width: 19%;
   }
   
   .block-img {
