--- a/style1.css
+++ b/style1.css
@@ -35,7 +35,9 @@ body {
   align-items: center;
   justify-content: flex-start;
   height: auto;
-  width: 800px;
+  width: 100%;
+  max-width: 1200px;
+  min-width: 0px;
   margin: auto;
   background-color: rgb(204, 245, 255);
   padding: 20px;
@@ -138,6 +140,12 @@ h1 {
   font-weight: 100;
   font-size: 24px;
   margin: 30px 0 10px 0;
+  height: auto;
+}
+
+.block-cost-all p {
+  word-wrap: break-word;
+  text-align: center;
 }
 
 .block-list {
@@ -146,7 +154,7 @@ h1 {
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  height: 250px;
+  height: 400px;
   overflow: scroll;
 }
 
@@ -191,6 +199,7 @@ h1 {
   line-height: 1.5;
   word-wrap: break-word;
   text-align: left;
+  cursor: pointer;
 }
 
 .date {
@@ -201,6 +210,7 @@ h1 {
   line-height: 1.5;
   word-wrap: break-word;
   text-align: center;
+  cursor: pointer;
 }
 
 .cost-one-input {
@@ -219,6 +229,7 @@ h1 {
   font-size: 24px;
   word-wrap: break-word;
   text-align: center;
+  cursor: pointer;
 }
 
 .block-img {
@@ -235,6 +246,12 @@ h1 {
   margin-left: auto;
   margin-left: 0px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1215px) {
+  .container {
+    width: 816px;
+  }
 }
 
 @media screen and (max-width: 815px) {
@@ -368,6 +385,7 @@ h1 {
 
   .block-cost-all {
     font-size: 22px;
+    width: 100%;
   }
 
   .main-inf {
